# meetmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  skills-lock.json
.cursor/rules/: specify-rules.mdc
.specify/: init-options.json
.specify/memory/: constitution.md
docker/: entrypoint.sh
docs/: ARQUITECTURA-Sistema-Procesamiento-Reuniones.md  PRD-Sistema-Procesamiento-Reuniones-IA.md  SLIDES-PRESENTACION-MEETMIND.md
docs/planning/: 01-user-personas.md  02-user-stories.md  03-backlog-priorizado.md  COMO-EJECUTAR.md
specs/001-hello-world-e2e/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-text-notes-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-participants-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-identify-topics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-extract-actions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-generate-minutes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-executive-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-web-file-upload/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-multimedia-recording/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-persist-meeting-records/: plan.md  (+5 more)
src/: __init__.py  config.py
tests/: __init__.py  conftest.py
(+131 files in other folders)
